--- a/101-clickable-grid/main.css
+++ b/101-clickable-grid/main.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
 
-    background-color: #FAF8EF;
+    background-color: #faf8ef;
 }
 
 #container {
@@ -20,30 +20,60 @@ body {
     padding: 10px 0;
 
     border-radius: 8px;
-    background-color: #BBADA0;
+    background-color: #bbada0;
 
     justify-content: center;
     align-items: center;
 }
 
+#selnum select {
+    width: 40px;
+    padding-right: 14px;
+
+    border: solid 1px rgba(100, 100, 100, .3);
+    border-radius: 4px;
+    background: url('arrow.png') no-repeat scroll right center transparent;
+    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, .1);
+       -moz-box-shadow: 0 0 1px rgba(0, 0, 0, .1);
+            box-shadow: 0 0 1px rgba(0, 0, 0, .1);
+
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+}
+
+#selnum select:focus {
+    outline: none;
+}
+
+#selnum select:hover {
+    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+       -moz-box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+            box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+}
+
 .box {
     display: flex;
-    padding: 4px;
-    border-radius: 8px;
 
     height: 500px;
     margin-top: 15px;
+    padding: 4px;
+
+    border-radius: 8px;
+    background-color: #bbada0;
+    -webkit-box-shadow: 0 0 3px #111;
+       -moz-box-shadow: 0 0 3px #111;
+            box-shadow: 0 0 3px #111;
 
     flex-wrap: wrap;
-    background-color: #BBADA0;
-    /*align-content: space-between;*/
 }
 
 .column {
+    font-size: 100px;
+
     display: flex;
 
     flex: 1 1 100%;
-    /*justify-content: space-between;*/
 }
 
 .item {
@@ -51,15 +81,15 @@ body {
 
     margin: 4px;
 
+    transition: 1s font;
     text-align: center;
 
+    color: #776e65;
     border-radius: 3px;
-    background-color: #EDE0C8;
+    background-color: #ede0c8;
+    text-shadow: 1px 1px 1px #fff2da;
 
     align-items: center;
     justify-content: center;
     flex: 1;
-
-    font-size: 50px;
-
 }
