--- a/102-github-pages/css/index.scss
+++ b/102-github-pages/css/index.scss
@@ -1,4 +1,5 @@
-@import "normalize.css";
-@import "animate.min.css";
-@import "iconfont.css";
-@import "main.css";
+// 本文件用于引入各种样式文件
+@import "normalize";
+@import "animate.min";
+@import "iconfont";
+@import "main";
