--- a/101-clickable-grid/grid.css
+++ b/101-clickable-grid/grid.css
@@ -2,12 +2,13 @@ form{
   width:500px;
   height:40px;
   margin-top:20px;
-  margin-left:20px;
+  margin-left:80px;
 }
 #main{
   width:600px;
   height:600px;
   margin:20px;
+  margin-top: 10px;
   border:2px solid #555;
 
 }
