--- a/103-signup-pages/stylesheet.css
+++ b/103-signup-pages/stylesheet.css
@@ -79,7 +79,13 @@
 
 .itemLabel {
 	margin-right: 30px;
-	text-align: right;
+	display: inline;
+    float: left;
+    margin-left: -200px;
+    width: 240px;
+    height: 37px;
+    line-height: 37px;
+    text-align: right;
 }
 .content .form_group .form_item div {
 	display: inline;
@@ -102,5 +108,57 @@
 }
 
 .content .form_group .form_item .verify{
-	border: 1px solid #dedede;
+
+}
+
+.content .form_group .form_item .verify{
+	display: inline-block;
+    position: relative;
+    width: 300px;
+    height: 34px;
+    background-color: #e8e8e8;
+    margin: 0;
+    padding: 0;	
+    border: 1px solid #dedede;
+}
+.content .form_group .form_item .verify #slide_bg{
+	position: absolute;
+    background: #7ac23c;
+    height: 100%;
+}
+
+.content .form_group .form_item .verify #slide_box {
+	width: 40px;
+    height: 32px;
+    line-height: 32px;
+    border: 1px solid #ccc;
+    position: absolute;
+    cursor: move;
+    background-color: #fff;
+    z-index: 2;
+    text-align: center;
+    color: #9c9c9c;
+}
+
+.content .form_group .form_item .verify #text_content {
+	width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    background-color: transparent;
+    color: #9c9c9c;
+    line-height: 34px;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.content .form_group .form_item .verify #text_content #slide_tip {
+	width: auto;
+    height: auto;
+    border: none;
+    z-index: 0;
+    display: inline;
+    background: 0 0;
+    position: static;
 }
