修正验证码BUG
补充了备用资源  解决了静态页面使用ajax请求资源的失败的问题

--- a/103-signup-pages/css/main.scss
+++ b/103-signup-pages/css/main.scss
@@ -259,6 +259,7 @@
 									background: #fff url('../source/img/green.png') no-repeat center;
 								}
 								&.active {
+									cursor: default;
 									background: #fff url('../source/img/yes.png') no-repeat center;
 								}
 							}
