--- a/101-clickable-grid/style.css
+++ b/101-clickable-grid/style.css
@@ -15,7 +15,8 @@
 	padding: 5px;
 	width: 200px;
 	height: 150px;
-
+	margin-top: 10px;
+	
 	line-height: 150px;
 	color: white;
 	font-weight: bold;
